--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,65 +1,59 @@
 <div ng-controller="MainCtrl">
-<!--
-      <div ng-repeat="post in posts | orderBy:'-upvotes'">
-        <span class="glyphicon glyphicon-thumbs-up"
-          ng-click="incrementUpvotes(post)"></span>
-        {{post.upvotes}}
-        <span style="font-size:20px; margin-left:10px;">
-          <a ng-show="post.link" href="{{post.link}}">
-            {{post.title}}
-          </a>
-          <span ng-hide="post.link">
-            {{post.title}}
-          </span>
-        </span>
+   <div class = "container">
+      <div class="row">
+         <div class='col-md-6'>
+            <div ng-repeat="team in teams | orderBy:'-upvotes'"> 
+               <span style="font-size:20px; margin-left:10px;">
+               <a >
+               {{team.name}}
+               </a>
+               </span>
+            </div>
+            <div>
+               <form ng-submit="addTeam()"
+                  style="margin-top:30px;">
+                  <h3>Add a new team</h3>
+                  <div class="form-group">
+                     <input type="text"
+                        class="form-control"
+                        placeholder="name"
+                        ng-model="name"></input>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Add Team</button>
+               </form>
+            </div>
+            <!-- end teams -->
+         </div>
+         <!-- end teams col -->
+
+         <div class='col-md-6'>
+            <div ng-repeat="employee in employees | orderBy:'-upvotes'"> 
+               <span style="font-size:20px; margin-left:10px;">
+               <a editable-text = "employee.name">
+               {{employee.name}}
+               </a>
+               </span>
+            </div>
+            <div>
+               <form ng-submit="addEmployee()"
+                  style="margin-top:30px;">
+                  <h3>Add a new employee</h3>
+                  <div class="form-group">
+                     <input type="text"
+                        class="form-control"
+                        placeholder="name"
+                        ng-model="emp_name"></input>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Add Employee</button>
+               </form>
+            </div>
+            <!-- end teams -->
+         </div>
+         <!-- end teams col -->
+
       </div>
-
-    <div>
-      <form ng-submit="addPost()"
-        style="margin-top:30px;">
-        <h3>Add a new post</h3>
-
-        <div class="form-group">
-          <input type="text"
-            class="form-control"
-            placeholder="Title"
-            ng-model="title"></input>
-        </div>
-        <div class="form-group">
-          <input type="text"
-          class="form-control"
-          placeholder="Link"
-          ng-model="link"></input>
-        </div>
-        <button type="submit" class="btn btn-primary">Post</button>
-      </form>
-    </div>
--->
-<!-- teams -->
-      <div ng-repeat="team in teams | orderBy:'-upvotes'"> 
-        <span style="font-size:20px; margin-left:10px;">
-          <a >
-            {{post.title}}
-          </a>
-        </span>
-      </div>
-
-    <div>
-      <form ng-submit="addTeam()"
-        style="margin-top:30px;">
-        <h3>Add a new team</h3>
-
-        <div class="form-group">
-          <input type="text"
-            class="form-control"
-            placeholder="name"
-            ng-model="name"></input>
-        </div>
-
-        <button type="submit" class="btn btn-primary">Add Team</button>
-      </form>
-    </div>
-<!-- end teams -->
-
+      <!-- end row -->
+   </div>
+   <!-- end container -->
 </div>
 
