--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,17 +1,20 @@
 <div ng-controller="MainCtrl">
    <div class = "container">
       <div class="row">
+       {{a.show_trash}}
          <div class='col-md-6'>
             <div ng-repeat="team in teams | orderBy:'-upvotes'"> 
                <span style="font-size:20px; margin-left:10px;">
-               <a >
+               <a editable-text = "team.name"  >
                {{team.name}}
                </a>
+               </span>
+               <span ng-click="deleteTeam()" ng-mouseenter= "a.show_trash=true" ng-mouseleave="a.show_trash=false" class="glyphicon glyphicon-trash">
                </span>
             </div>
             <div>
                <form ng-submit="addTeam()"
-                  style="margin-top:30px;">
+                  style="margin-top:30px; width: 200px">
                   <h3>Add a new team</h3>
                   <div class="form-group">
                      <input type="text"
@@ -23,20 +26,21 @@
                </form>
             </div>
             <!-- end teams -->
+ 
          </div>
          <!-- end teams col -->
 
          <div class='col-md-6'>
             <div ng-repeat="employee in employees | orderBy:'-upvotes'"> 
                <span style="font-size:20px; margin-left:10px;">
-               <a editable-text = "employee.name">
+               <a>
                {{employee.name}}
                </a>
                </span>
             </div>
             <div>
                <form ng-submit="addEmployee()"
-                  style="margin-top:30px;">
+                  style="margin-top:30px; width:200px">
                   <h3>Add a new employee</h3>
                   <div class="form-group">
                      <input type="text"
