--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,17 +1,22 @@
 <div ng-controller="MainCtrl">
    <div class = "container">
+
+     <div class="row">
+       <div class="col-md-6 col-md-offset-3">
+         <ui-view></ui-view>
+       </div>
+     </div>
+
       <div class="row">
-       {{a.show_trash}}
          <div class='col-md-6' style="min-height: 250px;">
-            <div ng-repeat="team in teams | orderBy:'-upvotes'"> 
+            <div ng-repeat="team in teams "> 
                <span style="font-size:20px; margin-left:10px;" ng-mouseover= "team_hover_over();" ng-mouseleave="team_leave()">
-               <a editable-text = "team.name"  >
+               <a editable-text = "team.name" onaftersave="updateTeam(team.id)"  >
                {{team.name}}
-               </a>
-                  <span ng-click="deleteTeam()" ng-show="show_trash" class="glyphicon glyphicon-trash">
+                </a>
+                  <span ng-click="deleteTeam(team.id)" ng-show="show_trash" class="glyphicon glyphicon-trash">
                   </span>
                </span>
-         
             </div>
             <div>
                <form ng-submit="addTeam()"
@@ -27,16 +32,16 @@
                </form>
             </div>
             <!-- end teams -->
- 
          </div>
          <!-- end teams col -->
-
          <div class='col-md-6'>
-            <div ng-repeat="employee in employees | orderBy:'-upvotes'"> 
-               <span style="font-size:20px; margin-left:10px;">
+            <div ng-repeat="employee in employees "> 
+               <span style="font-size:20px; margin-left:10px;" ng-mouseover= "team_hover_over();" ng-mouseleave="team_leave()">
                <a>
                {{employee.name}}
                </a>
+                  <span ng-click="deleteEmployee(employee.id)" ng-show="show_trash"  class="glyphicon glyphicon-trash">
+                  </span>
                </span>
             </div>
             <div>
@@ -55,10 +60,9 @@
             <!-- end teams -->
          </div>
          <!-- end teams col -->
-
       </div>
+
       <!-- end row -->
    </div>
    <!-- end container -->
 </div>
-
