--- a/public/templates/home/_home.html
+++ b/public/templates/home/_home.html
@@ -1,11 +1,5 @@
 
   <div class="page-header">
-    <h1>Your Headlines</h1>
+    <h1>Your Headlinesd</h1>
   </div>
-
-  <span>
-  <a href="#/posts/{{post.id}}">Comments</a>
-  </span>
-
-
 
