--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,14 +2,6 @@
    <div class = "container">
       <div class="row">
          <div class="col-md-6">
-         
-            <script type="text/ng-template" id="tpl.html">
-              Content of the template.
-            </script>
-
-            <!-- <a ng-click="currentTpl='/tpl.html'" id="tpl-link">Load inlined template</a> -->
-            <div   ng-include="'tpl.html'"></div>
-         
             <h5>Team List  </h5>
             <div ng-repeat="team in teams">
                <span style="font-size:20px; margin-left:10px;" ng-mouseover= "team_hover_over();" ng-mouseleave="team_leave()">
@@ -31,7 +23,6 @@
                </form>
             </div>
          </div>
-
          <div class="col-md-6">
             <div>
                <h5>Account List  </h5>
@@ -45,7 +36,6 @@
                   </span>
                </div>
             </div>
-
             <div>
                <form ng-submit="addAccount()" style="margin-top:30px; width: 200px" >
                   <h6>Add a new Account</h6>
@@ -57,14 +47,13 @@
                </form>
             </div>
          </div>
-
       </div>
       <hr>
       <div class="row">
          <div class='col-md-6' style="min-height: 250px;">
             <div ng-repeat="team in teams "> 
-               <span style="font-size:20px; margin-left:10px;" ng-mouseover= "team_hover_over();" ng-mouseleave="team_leave()">
-               <a editable-text = "team.name" onaftersave="updateTeam(team.id)"  >
+               <span style="font-size:20px; margin-left:10px;" >
+               <a  >
                {{team.name}}
                </a>
                </span>
@@ -100,6 +89,42 @@
          <!-- end teams col -->
       </div>
       <!-- end row -->
+      <!-- begin scripts  -->
+
+      <script type="text/ng-template" id="display.html">
+         <ul dnd-list="list">
+             <li ng-repeat="item in list"
+                 dnd-draggable="item"
+                 dnd-effect-allowed="move"
+                 dnd-moved="list.splice($index, 1)"
+                 dnd-selected="models.selected = item"
+                 ng-class="{selected: models.selected === item}"
+                 ng-include="item.type +'.html'"> 
+             </li>
+         </ul> 
+      </script>
+
+      <script type="text/ng-template" id="container.html">
+         <div class= "container-element box blue-box"> 
+             <h3> Container {{item.id}} </h3>
+             <div class="column" ng-repeat="list in item.columns" ng-include="'display.html'"> a</div> 
+             <div class="clearfix"> </div> 
+         </div>
+      </script>
+
+      <script type="text/ng-template" id="item.html">
+         <div class="item"> item {{item.id}} </div> 
+      </script>
+      <!-- end scripts  -->
+
+      <div class="row">
+         <div ng-repeat="(zone, list) in models.dropzones" class="col-md-6">
+            <div class="dropzone box box-yellow">
+               <h3>DropZone {{zone}}</h3>
+               <div ng-include="'display.html'"> </div>
+            </div>
+         </div>
+      </div>
    </div>
    <!-- end container -->
 </div>
