--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,15 +1,12 @@
-// Place all the styles related to the Main controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+/***************************** Required styles *****************************/
 
 /**
  * For the correct positioning of the placeholder element, the dnd-list and
  * it's children must have position: relative
  */
-
- ul[dnd-list],
- ul[dnd-list] > li {
-	position: relative;
+.teamsAccounts ul[dnd-list],
+.teamsAccounts ul[dnd-list] > li {
+    position: relative;
 }
 
 /***************************** Dropzone Styling *****************************/
@@ -18,7 +15,7 @@
  * The dnd-list should always have a min-height,
  * otherwise you can't drop to it once it's empty
  */
- .dropzone ul[dnd-list] {
+.teamsAccounts .dropzone ul[dnd-list] {
     min-height: 42px;
     margin: 0px;
     padding-left: 0px;
@@ -31,15 +28,7 @@
  * half of the element we are dragging over. In other
  * browsers we can use event.offsetY for this.
  */
-
-.box-blue > h3 {
-    color: #31708f;
-    background-color: #d9edf7;
-    border-color: #bce8f1;
-    background-image: -webkit-linear-gradient(top,#d9edf7 0,#c4e3f3 100%); 
-}
-
- .dropzone li {
+.teamsAccounts .dropzone li {
     background-color: #fff;
     border: 1px solid #ddd;
     display: block;
@@ -51,7 +40,7 @@
  * to see where he is dropping his element, even if the element is huge. The
  * .dndDragging class is automatically set during the drag operation.
  */
- .dropzone .dndDragging {
+.teamsAccounts .dropzone .dndDragging {
     opacity: 0.7;
 }
 
@@ -60,7 +49,7 @@
  * operation. It makes sense to hide it to give the user the feeling that he's
  * actually moving it. Note that the source element has also .dndDragging class.
  */
- .dropzone .dndDraggingSource {
+.teamsAccounts .dropzone .dndDraggingSource {
     display: none;
 }
 
@@ -68,24 +57,57 @@
  * An element with .dndPlaceholder class will be added as child of the dnd-list
  * while the user is dragging over it.
  */
- .dropzone .dndPlaceholder {
+.teamsAccounts .dropzone .dndPlaceholder {
     background-color: #ddd;
     min-height: 42px;
     display: block;
     position: relative;
 }
 
+/***************************** container styling *****************************/
+
+.box > h3 {
+    color: #333;
+    border-color: #ddd;
+    border-bottom: 1px solid transparent;
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
+    background-repeat: repeat-x;
+    display: block;
+    font-size: 16px;
+    padding: 10px 15px;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.box-blue > h3 {
+    color: #31708f;
+    background-color: #d9edf7;
+    border-color: #bce8f1;
+    background-image: -webkit-linear-gradient(top,#d9edf7 0,#c4e3f3 100%);
+    background-image: linear-gradient(to bottom,#d9edf7 0,#c4e3f3 100%);
+}
+
+.box-yellow > h3 {
+    color: #8a6d3b;
+    background-color: #fcf8e3;
+    border-color: #faebcc;
+    background-image: -webkit-linear-gradient(top,#fcf8e3 0,#faf2cc 100%);
+    background-image: linear-gradient(to bottom,#fcf8e3 0,#faf2cc 100%);
+}
+
 /***************************** Element Selection *****************************/
- .dropzone .selected .item {
+
+.teamsAccounts .dropzone .selected .item {
     color: #3c763d;
     background-color: #dff0d8;
 }
 
- .dropzone .selected .box {
+.teamsAccounts .dropzone .selected .box {
     border-color: #d6e9c6;
 }
 
- .dropzone .selected .box > h3 {
+.teamsAccounts .dropzone .selected .box > h3 {
     color: #3c763d;
     background-color: #dff0d8;
     background-image: linear-gradient(to bottom,#dff0d8 0,#d0e9c6 100%);
@@ -94,16 +116,17 @@
 
 /***************************** Element type specific styles *****************************/
 
- .dropzone .item {
+.teamsAccounts .dropzone .item {
     padding: 10px 15px;
 }
 
- .dropzone .container-element {
+.teamsAccounts .dropzone .container-element {
     margin: 10px;
-    /*background-image: linear-gradient(to bottom,#d9edf7 0,#c4e3f3 100%);*/
 }
 
- .dropzone .container-element .column {
+.teamsAccounts .dropzone .container-element .column {
     float: left;
     width: 50%;
 }
+
+
