--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,21 +6,26 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular-route.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.16/angular-resource.min.js"></script>
+
   <script src="/vendor/xeditable/js/xeditable.js"></script> 
   <script src="/vendor/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script> 
+  <script src="/vendor/angular_linq/angular_linq.js"></script>
 
   <%= stylesheet_link_tag 'application', media: 'all'  %>
   <%= javascript_include_tag 'application' %>
+
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="/vendor/xeditable/css/xeditable.css" rel="stylesheet">
 
   <%= csrf_meta_tags %>
 </head>
 
-<body >
+<body>
 
 <%= yield %>
 
 </body>
 
 </html>
+
+
