remodeling layout intermediate

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -118,6 +118,7 @@
 
 .teamsAccounts .dropzone .item {
     padding: 10px 15px;
+    height: 80px;
 }
 
 .teamsAccounts .dropzone .container-element {
@@ -128,5 +129,4 @@
     float: left;
     width: 50%;
 }
-
 
